# gen3-code-vigil

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  action.yml  index.js
gen3-integration-tests/: Dockerfile  README.md  conftest.py  package-lock.json  package.json  pyproject.toml  qa-upload-file_s779p.txt  requirements.txt
gen3-integration-tests/artifacts/jenkins_jobs/: ci-only-fetch-portal-config.groovy  ci-only-modify-env-for-service-pr.groovy  ci-only-run-gen3-command.groovy  ci-only-run-gen3-job.groovy  ci-only-select-and-lock-namespace.groovy  ci-only-unlock-namespace.groovy
gen3-integration-tests/docs/howto/: ci_metrics_setup.md  generate_api_keys_for_test_users.md  group_tests_from_multiple_suites.md  run_tests.md
gen3-integration-tests/docs/reference/: custom_scheduling.md
gen3-integration-tests/gen3_ci/ci_metrics/: Dockerfile  ci-metrics-cronjob.yaml  ci-metrics-sa.yaml  external-secret.yaml  secret-store-sa.yaml  secret-store.yaml
gen3-integration-tests/gen3_ci/default_manifest/: Chart.yaml
gen3-integration-tests/gen3_ci/gcp_cleanup/: Dockerfile  cleanup_google_resources.md  main.py  requirements.txt
gen3-integration-tests/gen3_ci/helm_cleanup/: Dockerfile  helm-ci-cleanup.yaml  helm-cleaner.yaml
gen3-integration-tests/gen3_ci/helm_scripts/: helm_env_setup.sh
gen3-integration-tests/gen3_ci/jenkins_jobs/: audit-service-logging.groovy  check-kube-job-pod.groovy  check-kube-pod.groovy  check_indices_after_etl.groovy  ci-only-audit-service-logging.groovy  ci-only-check-kube-job-pod.groovy  ci-only-check-register-users-on.groovy  ci-only-check_indices_after_etl.groovy  ci-only-clean-up-indices.groovy  ci-only-create-access-token.groovy  ci-only-create-link-google-test-buckets.groovy  ci-only-fence-client-rotate.groovy  ci-only-fence-clients-setup.groovy  ci-only-fence-create-client.groovy  ci-only-fence-delete-client.groovy  ci-only-fence-disable-register-users-redirect.groovy  ci-only-fence-enable-register-users-redirect.groovy  ci-only-fence-force-link-google.groovy  ci-only-fetch-configs.groovy  ci-only-fetch-portal-config.groovy  ci-only-generate-api-key.groovy  ci-only-generate-api-keys.groovy  ci-only-kube-setup-service.groovy  ci-only-modify-env-for-manifest-pr.groovy  ci-only-modify-env-for-service-pr.groovy  ci-only-modify-env-for-test-repo-pr.groovy  ci-only-mutate-guppy-config.groovy  ci-only-mutate-manifest-for-guppy-test.groovy  ci-only-publish-ci-metrics-config.xml  ci-only-revoke-arborist-policy.groovy  ci-only-roll-pods.groovy  (+24 more)
gen3-integration-tests/helm_values/: allure-collector.yaml  values.yaml
gen3-integration-tests/pages/: core_metadata_page.py  data_library_page.py  dicom.py  discovery.py  exploration.py  files_landing_page.py  gen3ff_landing_page.py  gwas.py  home.py  indexing_page.py  login.py  metadata_landing_page.py  study_registration.py  study_viewer.py  submission.py  user_register.py  workspace.py
gen3-integration-tests/scripts/: create_dev_env.py  list_test_suites.py
gen3-integration-tests/services/: audit.py  client.py  coremetadata.py  dataclient.py  dicom.py  drs.py  embedding.py  fence.py  gen3workflow.py  gen3workflows.py  graph.py  guppy.py  hatchery.py  homepage.py  indexd.py  login.py  manifestservice.py  metadataservice.py  peregrine.py  ras.py  requestor.py  sheepdog.py  sheepdog_peregrine.py  structured_data.py  tube.py  userdatalibrary.py
gen3-integration-tests/test_data/: users.csv
gen3-integration-tests/tests/: test_aggregate_mds.py  test_argo_wrapper.py  test_attach_run_logs.py  test_audit_service.py  test_centralized_auth.py  test_clever_safe.py  test_client_credentials.py  test_data_upload.py  test_dataguids.py  test_dbgap.py  test_dicom_viewer.py  test_discoverypage.py  test_drs_endpoint.py  test_dummy.py  test_env_sanity.py  test_etl.py  test_etl_pfb_export.py  test_fence_admin.py  test_gen3_embedding.py  test_gen3_sdk.py  test_gen3_workflow.py  test_gen3_workflows.py  test_gen3client.py  test_gen3ff_landing_page.py  test_google_data_access.py  test_graph_submit_and_query.py  test_guppy_service.py  test_homepage.py  test_indexing_page.py  test_link_google_account.py  test_login_authorized_users.py  test_login_page.py  test_manifest_service.py  test_metadata_ingestion.py  test_oauth2.py  test_oidc_client.py  test_pfb_export.py  test_presigned_url.py  test_ras_authN.py  test_ras_authn.py  (+10 more)
gen3-integration-tests/utils/: __init__.py  data_upload.py  gen3_admin_tasks.py  gen3_ci.py  gen3_client_install.py  jenkins.py  misc.py  nodes.py  test_execution.py  test_setup.py
gen3-load-tests/: README.md  conftest.py  download_performance_test.py  pyproject.toml
gen3-load-tests/k6_load_testing_scripts/: ga4gh-drs-performance.js  metadata-service-create-and-query.js
gen3-load-tests/load_testing_output/: fence-presigned-url.json  indexd-create-indexd-records.json  indexd-drs-endpoint.json  sheepdog-import-clinical-metadata.json
gen3-load-tests/load_testing_scripts/: embedding-bulk-content-retieval.js  embedding-search-embeddings.js  fence-bulk-presigned-url.js  fence-presigned-url.js  ga4gh-drs-performance.js  indexd-create-indexd-records.js  indexd-drs-endpoint.js  metadata-service-create-and-query.js  metadata-service-filter-large-database.js  sheepdog-import-clinical-metadata.js
gen3-load-tests/sample_descriptors/: load-test-fence-presigned-url-stress-sample.json  load-test-ga4gh-drs-performance-sample.json
gen3-load-tests/sdk_testing/: README.md  download_performance_test.py
gen3-load-tests/services/: embedding.py
gen3-load-tests/test_data/: sample_manifest.json
gen3-load-tests/tests/: test.py  test_create_indexd_records.py  test_fence_bulk_presigned_url.py  test_fence_presigned_url.py  test_ga4gh_drs_performance.py  test_gen3_embedding.py  test_indexd_create_indexd_records.py  test_indexd_drs_endpoint.py  test_metadata_create_and_query.py  test_metadata_filter_large_database.py  test_sheepdog_import_clinical_metadata.py
gen3-load-tests/utils/: __init__.py  gen3_admin_tasks.py  jenkins.py  k6_load_test.py  load_test.py  misc.py  test_execution.py  test_setup.py
(+259 files in other folders)
