[tool.poetry]
name = "gen3-integration-tests"
version = "0.1.0"
description = "Gen3 Integration Tests"
authors = ["CTDS UChicago <cdis@uchicago.edu>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/uc-cdis/gen3-code-vigil"
package-mode = false
include = [
  "NOTICE",
]

[tool.poetry.dependencies]
python = "^3.9"
cdislogging = "<2"
data-simulator = {git = "https://github.com/uc-cdis/data-simulator", rev = "1.6.1"}
filelock = "<4"
gen3 = "<5"
pytest = "^7.4.0"
pytest-datadir = "^1.4.1"
pytest-env = "^1.0.0"
pytest-html = "^3.2.0"
pytest-md-report = "^0.5.0"
pytest-playwright = "^0.4.3"
pytest-xdist = "^3.3.1"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
pypfb = "^0.5.29"
fastavro = "^1.8.2"
psutil = "^5.9.8"
nest-asyncio = "^1.6.0"
allure-pytest = "^2.13.5"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--log-cli-level=ERROR"
markers = [
  # general
  "wip: marks tests as `Work In Progress` and skips them in CI pipeline",
  "requires_fence_client: tests for fence clients",
  "requires_google_bucket: tests which require creation of google buckets",
  # services
  "argo_wrapper: tests for argo_wrapper",
  "audit: tests for audit-service",
  "dicom_viewer: tests for dicom-viewer",
  "fence: test for fence service",
  "frontend_framework: tests for frontend-framework",
  "gen3_client: tests for gen3-client / cdis-data-client",
  "guppy: tests for guppy-service",
  "indexd: tests for indexd service",
  "manifestservice: tests for manifest service",
  "mds: tests for metadata-service",
  "portal: tests for data-portal",
  "requestor: tests for requestor service",
  "sower: tests for sower service",
  "ssjdispatcher: tests for ssjdispatcher service",
  "tube: tests for tube service",
  "wts: tests for workspace-token-service",
  # features
  "agg_mds: tests for aggregate metadata service",
  "client_credentials: tests for fence client credentials",
  "data_upload: tests for data upload",
  "graph_submission: tests for submitting graph data",
  "graph_query: tests for querying graph data",
  "pfb: tests for pfb file handling",
  "workspace: tests for workspace page",
  "sanity: tests for performing sanity check",
  "study_registration: tests for study registration service"
]
pythonpath = "."
md_report = "true"
md_report_verbose = 0
md_report_output = "output/report.md"
md_report_flavor = "gfm"
md_report_skip_color = "#FFA500"
