[tool.poetry]
name = "gen3-integration-tests"
version = "0.1.0"
description = "Gen3 Integration Tests"
authors = ["CTDS UChicago <cdis@uchicago.edu>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/uc-cdis/gen3-code-vigil"
package-mode = false
include = [
  "NOTICE",
]

[tool.poetry.dependencies]
python = "^3.9"
cdislogging = "<2"
data-simulator = {git = "https://github.com/uc-cdis/data-simulator", rev = "1.6.5"}
filelock = "<4"
gen3 = "^4.27.3"
nextflow = "^24.10.3"
pandas = "<3"
pytest = "^7.4.0"
pytest-datadir = "^1.4.1"
pytest-env = "^1.0.0"
pytest-html = "^3.2.0"
pytest-md-report = "^0.5.0"
pytest-playwright = "^0.4.3"
pytest-xdist = "^3.3.1"
python-dotenv = "^1.0.0"
requests = "^2.32.5"
pypfb = "^0.5.29"
fastavro = "^1.8.2"
psutil = "^5.9.8"
allure-pytest = "^2.13.5"
nextflowpy = "^0.11.0"
boto3 = "^1.38.20"

# NOTE: NumPy version is pinned to <2.0.0
# Without this, importing pandas throws the following error during CI:
# ValueError: numpy.dtype size changed, may indicate binary incompatibility.
# Expected 96 from C header, got 88 from PyObject
# This is caused by a tertiary dependency conflict between newer versions of NumPy, Pandas, and Gen3.
numpy = "<2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests/"]
addopts = "--disable-warnings"
log_cli = false
markers = [
  # general
  "wip: marks tests as `Work In Progress` and skips them in CI pipeline",
  "requires_fence_client: tests for fence clients",
  "requires_google_bucket: tests which require creation of google buckets",
  # services
  "argo_wrapper: tests for argo_wrapper",
  "audit: tests for audit-service",
  "dicom_viewer: tests for dicom-viewer",
  "fence: test for fence service",
  "frontend_framework: tests for frontend-framework",
  "gen3_client: tests for gen3-client / cdis-data-client",
  "gen3_workflow: tests for gen3-workflow",
  "gen3_user_data_library: tests for gen3-user-data-library",
  "guppy: tests for guppy-service",
  "indexd: tests for indexd service",
  "manifestservice: tests for manifest service",
  "mds: tests for metadata-service",
  "portal: tests for data-portal",
  "ras: tests for ras",
  "requestor: tests for requestor service",
  "sower: tests for sower service",
  "ssjdispatcher: tests for ssjdispatcher service",
  "tube: tests for tube service",
  "wts: tests for workspace-token-service",
  # features
  "agg_mds: tests for aggregate metadata service",
  "client_credentials: tests for fence client credentials",
  "etl: tests for etl",
  "data_upload: tests for data upload",
  "gen3sdk: tests for gen3sdk",
  "graph_submission: tests for submitting graph data",
  "graph_query: tests for querying graph data",
  "pfb: tests for pfb file handling",
  "workspace: tests for workspace page",
  "sanity: tests for performing sanity check",
  "study_registration: tests for study registration service"
]
pythonpath = "."
md_report = "true"
md_report_verbose = 0
md_report_output = "output/report.md"
md_report_flavor = "gfm"
# md_report_skip_color = "#FFA500"
md_report_color = "never"
