[project]
name = "gen3-integration-tests"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "CTDS UChicago", email = "cdis@uchicago.edu" }
]
license = "Apache-2.0"
requires-python = ">=3.13"
dependencies = [
    "allure-pytest>=2.16.0",
    "boto3>=1.38.20",
    "cdislogging<2",
    "data-simulator",
    "fastavro>=1.8.2",
    "filelock<4",
    "gen3>=4.28.1",
    "langchain>=1.2.10",
    "langchain-core>=1.2.14",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-ollama>=1.0.1",
    "nextflow>=26.4.4",
    "nextflowpy>=0.13.1", # see https://github.com/goodwright/nextflow.py/issues/14
    "packaging>=26.2",
    "pandas<3",
    "psutil>=5.9.8",
    "pypfb>=0.5.29",
    "pytest>=7.4.0",
    "pytest-md-report>=0.5.0",
    "pytest-playwright>=0.4.3",
    "pytest-xdist>=3.3.1",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.5",
]

[tool.uv.sources]
data-simulator = { git = "https://github.com/uc-cdis/data-simulator.git", rev = "1.6.5" }

[dependency-groups]
dev = [
    "pre-commit>=3.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gen3-code-vigil/gen3_integration_tests"]

[tool.pytest.ini_options]
testpaths = ["tests/"]
python_files = ["test_*.py"]
addopts = "--log-cli-level=ERROR -ra -q"
markers = [
  # general
  "wip: marks tests as `Work In Progress` and skips them in CI pipeline",
  "requires_fence_client: tests for fence clients",
  "requires_google_bucket: tests which require creation of google buckets",
  # services
  "argo_wrapper: tests for argo_wrapper",
  "audit: tests for audit-service",
  "dicom_viewer: tests for dicom-viewer",
  "fence: test for fence service",
  "frontend: tests for frontend/gui",
  "gen3_client: tests for gen3-client / cdis-data-client",
  "gen3_workflow: tests for gen3-workflow",
  "gen3_user_data_library: tests for gen3-user-data-library",
  "guppy: tests for guppy-service",
  "indexd: tests for indexd service",
  "manifestservice: tests for manifest service",
  "mds: tests for metadata-service",
  "ras: tests for ras",
  "requestor: tests for requestor service",
  "sower: tests for sower service",
  "ssjdispatcher: tests for ssjdispatcher service",
  "tube: tests for tube service",
  "wts: tests for workspace-token-service",
  # features
  "agg_mds: tests for aggregate metadata service",
  "client_credentials: tests for fence client credentials",
  "etl: tests for etl",
  "data_upload: tests for data upload",
  "gen3sdk: tests for gen3sdk",
  "graph_submission: tests for submitting graph data",
  "graph_query: tests for querying graph data",
  "pfb: tests for pfb file handling",
  "workspace: tests for workspace page",
  "sanity: tests for performing sanity check",
  "study_registration: tests for study registration service"
]
pythonpath = "."
md_report = "true"
md_report_verbose = 0
md_report_output = "output/report.md"
md_report_flavor = "gfm"
# md_report_skip_color = "#FFA500"
md_report_color = "never"
